added grid container for the about section.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,20 @@
 body {
     color: grey;
 }
+
+.h2-header {
+    grid-area: header;
+}
+
+.content {
+    grid-area: content;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    grid-template-areas:
+        "header"
+        "content";
+}
