--- a/src/_includes/sections/about.njk
+++ b/src/_includes/sections/about.njk
@@ -1,4 +1,6 @@
 {%- for about in collections.about -%}
-    <h2>{{ about.data.title }}</h2>
-    <div>{{about.templateContent | safe }}</div>
+    <div class="container">
+        <h2 class="header">{{ about.data.title }}</h2>
+        <article class="content">{{about.templateContent | safe }}</article>
+    </div>
 {% endfor %}
