adjusted containers in about section to be in-line added css

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -13,8 +13,10 @@
 
   <body>
     <header>WeEvolve HEADER</header>
-    {{collections | log}}
-    {{content | safe}}
+    <div class="container">
+      {{collections | log}}
+      {{content | safe}}
+    </div>
     <footer>We Evolve.</footer>
   </body>
 
