join section rough draft

--- a/src/_includes/sections/join.njk
+++ b/src/_includes/sections/join.njk
@@ -1,11 +1,13 @@
-<div>Ready to join?</div>
-<div>Add your email below to request an invite to the We Evolve Slack channel</div>
+<div class="join">
+<h3>Ready to join?</h3>
+<article class="join-content">Add your email below to request an invite to the We Evolve Slack channel</article>
+</div>
+{# Unsure if the "How to Join" section is up to date on the design. 
+One draft shows this section and another draft doesn't #}
 
-<p>Have questions? Let us Know!</p>
-
-<h2>How to join the We Evolve community</h2>
+{# <h2>How to join the We Evolve community</h2>
 <div>
 {% markdown %}
   {%- include "../../content/how_to_join.md" -%}
 {% endmarkdown %}
-</div>
+</div> #}
