CSS Tweaks to about and join sections

--- a/src/_includes/sections/join.njk
+++ b/src/_includes/sections/join.njk
@@ -1,6 +1,6 @@
 <div class="join">
 <h3>Ready to join?</h3>
-<article class="join-content">Add your email below to request an invite to the We Evolve Slack channel</article>
+<article class="content"><p>Add your email below to request an invite to the We Evolve Slack channel</p></article>
 </div>
 {# Unsure if the "How to Join" section is up to date on the design. 
 One draft shows this section and another draft doesn't #}
