adjusted CSS and added small form for email intake

--- a/src/_includes/sections/join.njk
+++ b/src/_includes/sections/join.njk
@@ -1,6 +1,12 @@
 <div class="join">
-<h3>Ready to join?</h3>
-<article class="content"><p>Add your email below to request an invite to the We Evolve Slack channel</p></article>
+  <h3>Ready to join?</h3>
+  <article class="content"><p>Add your email below to request an invite to the We Evolve Slack channel</p>
+  <form action="/action_page.php">
+    <input type="text" id="email" name="email" value="Type email here">
+    <input type="submit" value="Submit">
+  </form>
+  </article> 
+
 </div>
 {# Unsure if the "How to Join" section is up to date on the design. 
 One draft shows this section and another draft doesn't #}
