--- a/src/_includes/sections/about.njk
+++ b/src/_includes/sections/about.njk
@@ -1,5 +1,5 @@
 {%- for about in collections.about -%}
-<div>
+<div class="about">
     <h2 class="h2-header">{{ about.data.title }}</h2>
     <article class="content">{{about.templateContent | safe }}</article>
 </div>
